force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <description>Stores various products available in the CPQ catalog.</description>
    <label>CPQ Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>