force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product category which influences default discounts.</description>
    <label>Category</label>
    <referenceTo>Categories__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>