force-app/main/default/objects/Product__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>The internal cost to produce or acquire this product (Hidden from Sales Reps).</description>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>