force-app/main/default/objects/Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Type of product (Hardware, Software, or Recurring Revenue).</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware</fullName>
                <label>HW</label>
            </value>
            <value>
                <fullName>Software</fullName>
                <label>SW</label>
            </value>
            <value>
                <fullName>Recurring</fullName>
                <label>RR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>