force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Cost__c</columns>
    <columns>Price__c</columns>
    <columns>Billing_Unit__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>